# AstroSpike

./: .gitignore  CMakeLists.txt  README.md  build_all.bat  build_installer.bat  changelog.txt  deploy.bat
.github/workflows/: macos_build.yml
src/: AstroSpikeDialog.cpp  AstroSpikeDialog.h  ImageBuffer.cpp  ImageBuffer.h  Info.plist  MainWindow.cpp  MainWindow.h  build_installer_macos.sh  build_macos.sh  macos_utils.sh  main.cpp  package_macos.sh  resources.qrc  windows_utils.bat
src/core/: RobustStatistics.cpp  RobustStatistics.h
src/dialogs/: DialogBase.cpp  DialogBase.h
src/images/: AstroSpike.icns
src/io/: FitsWriter.cpp  FitsWriter.h
